# raspberry-gpu-stereo

./: .gitignore  README.md
docs/stereo_matching_gpu_paper/: .examplefigtables.swp  Makefile  examplefigtables  glsl_highlight.tex  ieeeconf.aux  ieeeconf.bbl  ieeeconf.bib  ieeeconf.blg  ieeeconf.tex
emb_vision/: CMakeLists.txt  bcm2835.c  emb_vision.cc  emb_vision.cpp  emb_vision.h  glprogram.cc  glshader.cc  glshader.h  graphics.cc  graphics.cpp  graphics.h  img.h  ov7670.c  ov7670.h  right_frame_data.h
emb_vision/shader/fs/: contrast.glsl  dmapN.glsl  erode.glsl
emb_vision/shader/vs/: interpolate_xy.glsl  simple.glsl
emb_vision/shaders/: s_dmap.glsl  s_hdec.glsl  s_henc.glsl
emb_vision/shaders/alt/: s_swin.glsl
etc/hough/: hough.h  main.c
raspberry/: spi.c
raspberry-opengl/: bcm2835.h  glprogram.h  glshader.cc  gltexture.cc  gltexture.h  graphics.cc  left-frame-data.h  ov7670.c
related-miscellaneous/rawgimp2header/: main.c
report/: R1.tex  Reporte.tex  build.sh  report.tex
report/M01/: actividades.tex  activities.tex  administrative.tex  pendientes.tex  pending.tex  resultados.tex  results.tex
report/M02/: actividades.tex  pending.tex  resultados.tex
report/M03/: activities.tex
report/M04/: activities.tex  pending.tex
report/M10/: results.tex
report/fig/: cammountp1.tex  cammountp2.tex  cammountp3.tex  eiffel_grayscale.tex  eiffel_hough.tex  eiffel_phough.tex  ganttA.tex
report/tab/: boardpin_dcmi.tex  (+7 more)
webgl/: hierarchical.js  index.php
webgl_dmap/: index.php  lib.js  method1.js  method2.js  method3.js  method4.js  method7.js
(+79 files in other folders)
